k8s/network-policies/ci-allow-jenkins.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-build-agent-to-jenkins
  namespace: ci-build-agents
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: jenkins
          podSelector:
            matchLabels:
              app.kubernetes.io/component: jenkins-controller
              app.kubernetes.io/instance: jenkins
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 50000
